added more package.json values

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "url" : "https://github.com/mdomi/jsonpath/issues",
         "email" : "mike@mikedominice.com"
     },
+    "keywords" : ["json", "jsonpath", "cli"],
+    "main" : "./lib/jsonpath",
     "version" : "0.0.1",
     "private" : true,
     "license" : "MIT",
